<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic"
        android:id="@+id/topic"
        android:layout_margin="20dp"
        android:textSize="17sp"
        android:lineSpacingExtra="1dp"
        android:textColor="#000000"
        android:gravity="right"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/date"
        android:layout_toEndOf="@+id/date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/date"
        android:id="@+id/date"
        android:textColor="#008a7d"
        android:textSize="15sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topic"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:id="@+id/description"
            android:lineSpacingExtra="2dp"
            android:layout_marginRight="9dp"
            android:layout_marginLeft="9dp"
            android:gravity="right"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="17sp" />
    </ScrollView>

</RelativeLayout>
